[gd_scene load_steps=28 format=3 uid="uid://bw22o71uos633"]

[ext_resource type="Texture2D" uid="uid://crs2e3kb7i65e" path="res://Assets/explosion07.png" id="1_6qfgs"]
[ext_resource type="Script" path="res://Scripts/explosion.gd" id="1_7v1ek"]
[ext_resource type="Material" uid="uid://dv8lgly1nkok2" path="res://Assets/mat_flash.tres" id="2_2b1od"]

[sub_resource type="SphereShape3D" id="SphereShape3D_prdba"]
radius = 3.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_j1kgu"]
transparency = 1
cull_mode = 2
shading_mode = 0
vertex_color_use_as_albedo = true
albedo_texture = ExtResource("1_6qfgs")

[sub_resource type="CurveTexture" id="CurveTexture_qqg5i"]

[sub_resource type="Curve" id="Curve_sd7of"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_tlktq"]
max_value = 5.0
_data = [Vector2(0, 5), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_omkfy"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveXYZTexture" id="CurveXYZTexture_20oso"]
curve_x = SubResource("Curve_sd7of")
curve_y = SubResource("Curve_tlktq")
curve_z = SubResource("Curve_omkfy")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_31qxt"]
particle_flag_align_y = true
emission_shape = 1
emission_sphere_radius = 0.2
angle_min = 180.0
angle_max = 180.0
radial_velocity_min = 10.0
radial_velocity_max = 15.0
radial_velocity_curve = SubResource("CurveTexture_qqg5i")
gravity = Vector3(0, -20, 0)
scale_min = 0.5
scale_curve = SubResource("CurveXYZTexture_20oso")

[sub_resource type="QuadMesh" id="QuadMesh_ijgor"]

[sub_resource type="Curve" id="Curve_i0sp4"]
_data = [Vector2(0, 1), 0.0, -1.15101, 0, 0, Vector2(1, 0), -1.54873, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_o612n"]
curve = SubResource("Curve_i0sp4")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_u4wih"]
gravity = Vector3(0, 0, 0)
scale_min = 4.0
scale_max = 20.0
scale_curve = SubResource("CurveTexture_o612n")
color = Color(2.5, 1, 0.5, 1)

[sub_resource type="QuadMesh" id="QuadMesh_7a6sw"]

[sub_resource type="Gradient" id="Gradient_l8l6j"]
offsets = PackedFloat32Array(0.00403226, 1)
colors = PackedColorArray(1, 1, 1, 0, 1, 1, 1, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_k0hn0"]
gradient = SubResource("Gradient_l8l6j")

[sub_resource type="Curve" id="Curve_hjo6j"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), -2.14054, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_crq3a"]
curve = SubResource("Curve_hjo6j")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_n4t3p"]
lifetime_randomness = 1.0
emission_shape = 1
emission_sphere_radius = 0.4
spread = 180.0
initial_velocity_min = 0.5
initial_velocity_max = 2.0
gravity = Vector3(0, -2, 0)
scale_min = 1.5
scale_max = 3.0
scale_curve = SubResource("CurveTexture_crq3a")
color = Color(5, 2, 1, 1)
color_ramp = SubResource("GradientTexture1D_k0hn0")

[sub_resource type="QuadMesh" id="QuadMesh_uk184"]

[sub_resource type="Curve" id="Curve_1iuey"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), -1.84273, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_dn4f2"]
curve = SubResource("Curve_1iuey")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_2rbcf"]
lifetime_randomness = 0.5
emission_shape = 1
emission_sphere_radius = 0.4
spread = 180.0
initial_velocity_min = 0.5
initial_velocity_max = 2.0
gravity = Vector3(0, 0, 0)
scale_min = 3.0
scale_max = 4.0
scale_curve = SubResource("CurveTexture_dn4f2")
color = Color(0.0705882, 0.0705882, 0.0705882, 0.839216)

[sub_resource type="QuadMesh" id="QuadMesh_7af4i"]

[sub_resource type="SphereShape3D" id="SphereShape3D_ncrfq"]
radius = 2.5

[node name="Explosion" type="Area3D"]
collision_layer = 8
collision_mask = 6
script = ExtResource("1_7v1ek")

[node name="ExplosionCollision" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_prdba")

[node name="Sparks" type="GPUParticles3D" parent="."]
material_override = SubResource("StandardMaterial3D_j1kgu")
emitting = false
amount = 20
lifetime = 0.6
one_shot = true
explosiveness = 1.0
fixed_fps = 60
process_material = SubResource("ParticleProcessMaterial_31qxt")
draw_pass_1 = SubResource("QuadMesh_ijgor")

[node name="Flash" type="GPUParticles3D" parent="."]
material_override = ExtResource("2_2b1od")
emitting = false
lifetime = 0.1
one_shot = true
explosiveness = 1.0
fixed_fps = 60
process_material = SubResource("ParticleProcessMaterial_u4wih")
draw_pass_1 = SubResource("QuadMesh_7a6sw")

[node name="Fire" type="GPUParticles3D" parent="."]
material_override = ExtResource("2_2b1od")
emitting = false
amount = 13
lifetime = 0.55
one_shot = true
explosiveness = 1.0
fixed_fps = 60
process_material = SubResource("ParticleProcessMaterial_n4t3p")
draw_pass_1 = SubResource("QuadMesh_uk184")

[node name="Smoke" type="GPUParticles3D" parent="."]
material_override = ExtResource("2_2b1od")
emitting = false
amount = 10
lifetime = 0.8
one_shot = true
explosiveness = 1.0
fixed_fps = 60
process_material = SubResource("ParticleProcessMaterial_2rbcf")
draw_pass_1 = SubResource("QuadMesh_7af4i")

[node name="SplashDamage" type="Area3D" parent="."]
visible = false
collision_layer = 8
collision_mask = 5

[node name="SplashCollision" type="CollisionShape3D" parent="SplashDamage"]
shape = SubResource("SphereShape3D_ncrfq")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_entered" from="SplashDamage" to="." method="_on_splash_damage_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
